dropdown and select own scrollbars were replaced by default ones

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -51,7 +51,7 @@
                       <div class="notifications-dropdown__toggle-title">4</div>
                     </div>
                     <div class="dropdown__body notifications-dropdown__body">
-                      <div class="custom-scroll notifications-dropdown__scroll" data-dropdown-simplebar="data-dropdown-simplebar">
+                      <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
@@ -65,7 +65,7 @@
                     <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
                     </button>
                     <div class="select__dropdown js-select-dropdown">
-                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
+                      <div class="custom-scroll select__dropdown-scroll" data-simplebar="data-simplebar">
                         <div class="select__options js-select-options">
                           <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
                           <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
@@ -219,7 +219,7 @@
                                   <div class="change-position-dropdown__title">
                                     <h6>Setted position permissions will be applied!</h6>
                                   </div>
-                                  <div class="custom-scroll change-position-dropdown__items" data-dropdown-simplebar>
+                                  <div class="custom-scroll change-position-dropdown__items" data-simplebar>
                                     <div class="change-position-dropdown__item">
                                       <label class="radio change-position-dropdown__item-radio">
                                         <div class="radio__box">
@@ -884,7 +884,7 @@
                                         </button>
                                       </div>
                                     </div>
-                                    <div class="custom-scroll manage-skills__list" data-dropdown-simplebar>
+                                    <div class="custom-scroll manage-skills__list" data-simplebar>
                                       <div class="manage-skills__items">
                                         <div class="manage-skills__item">
                                           <div class="manage-skills__item-left">
@@ -1235,7 +1235,7 @@
                                         </button>
                                       </div>
                                     </div>
-                                    <div class="custom-scroll manage-skills__list" data-dropdown-simplebar>
+                                    <div class="custom-scroll manage-skills__list" data-simplebar>
                                       <div class="manage-skills__items">
                                         <div class="manage-skills__item">
                                           <div class="manage-skills__item-left">
@@ -2034,7 +2034,7 @@
                                     <button class="select__label js-select-label" data-selected="translation" type="button"><span>Translation</span>
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
-                                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                      <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                         <div class="select__options js-select-options">
                                           <div class="select__option js-select-option" data-option="translation"><span>Translation</span></div>
                                           <div class="select__option js-select-option" data-option="translation 2"><span>Translation 2</span></div>
@@ -2057,7 +2057,7 @@
                                         <button class="select__label js-select-label" data-selected="DHL" type="button"><span>DHL</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="DHL"><span>DHL</span></div>
                                               <div class="select__option js-select-option" data-option="DHL 2"><span>DHL 2</span></div>
@@ -2093,7 +2093,7 @@
                                         <button class="select__label js-select-label" data-selected="source" type="button"><span>Source</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="source"><span>Source</span></div>
                                               <div class="select__option js-select-option" data-option="source 2"><span>Source 2</span></div>
@@ -2109,7 +2109,7 @@
                                         <button class="select__label js-select-label" data-selected="target" type="button"><span>Target</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="target"><span>Target</span></div>
                                               <div class="select__option js-select-option" data-option="target 2"><span>Target 2</span></div>
@@ -2134,7 +2134,7 @@
                                         <button class="select__label js-select-label" data-selected="lating" type="button"><span>Lating</span>
                                         </button>
                                         <div class="select__dropdown js-select-dropdown">
-                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                          <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                             <div class="select__options js-select-options">
                                               <div class="select__option js-select-option" data-option="lating"><span>Lating</span></div>
                                               <div class="select__option js-select-option" data-option="lating 2"><span>Lating 2</span></div>
@@ -2164,7 +2164,7 @@
                                     <button class="select__label js-select-label" data-selected="-1 hours" type="button"><span>-1 hours</span>
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
-                                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                      <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                         <div class="select__options js-select-options">
                                           <div class="select__option js-select-option" data-option="-1 hours"><span>-1 hours</span></div>
                                           <div class="select__option js-select-option" data-option="-1 hours 2"><span>-1 hours 2</span></div>
