--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -51,7 +51,7 @@
                       <div class="notifications-dropdown__toggle-title">4</div>
                     </div>
                     <div class="dropdown__body notifications-dropdown__body">
-                      <div class="custom-scroll notifications-dropdown__scroll" data-dropdown-simplebar="data-dropdown-simplebar">
+                      <div class="custom-scroll notifications-dropdown__scroll" data-simplebar="data-simplebar">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
@@ -65,7 +65,7 @@
                     <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
                     </button>
                     <div class="select__dropdown js-select-dropdown">
-                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
+                      <div class="custom-scroll select__dropdown-scroll" data-simplebar="data-simplebar">
                         <div class="select__options js-select-options">
                           <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
                           <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
@@ -385,7 +385,7 @@
                                 <div class="select__search">
                                   <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                 </div>
-                                <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                   <div class="select__options js-select-options">
                                     <div class="select__option js-select-option" data-option="lt"><span>Lithianian</span></div>
                                     <div class="select__option js-select-option" data-option="en"><span>English</span></div>
@@ -409,7 +409,7 @@
                                 <div class="select__search">
                                   <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                 </div>
-                                <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                                   <div class="select__options js-select-options">
                                     <div class="select__option js-select-option" data-option="lt"><span>Lithianian</span></div>
                                     <div class="select__option js-select-option" data-option="en"><span>English</span></div>
@@ -853,7 +853,7 @@
                           <button class="select__label js-select-label" data-selected="25" type="button"><span>25</span>
                           </button>
                           <div class="select__dropdown js-select-dropdown">
-                            <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                            <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                               <div class="select__options js-select-options">
                                 <div class="select__option js-select-option" data-option="25"><span>25</span></div>
                                 <div class="select__option js-select-option" data-option="30"><span>30</span></div>
@@ -1321,7 +1321,7 @@
                           <button class="select__label js-select-label" data-selected="25" type="button"><span>25</span>
                           </button>
                           <div class="select__dropdown js-select-dropdown">
-                            <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                            <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                               <div class="select__options js-select-options">
                                 <div class="select__option js-select-option" data-option="25"><span>25</span></div>
                                 <div class="select__option js-select-option" data-option="30"><span>30</span></div>
@@ -1789,7 +1789,7 @@
                           <button class="select__label js-select-label" data-selected="25" type="button"><span>25</span>
                           </button>
                           <div class="select__dropdown js-select-dropdown">
-                            <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                            <div class="custom-scroll select__dropdown-scroll" data-simplebar>
                               <div class="select__options js-select-options">
                                 <div class="select__option js-select-option" data-option="25"><span>25</span></div>
                                 <div class="select__option js-select-option" data-option="30"><span>30</span></div>
