--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -23,7 +23,7 @@
                 <button class="select__label js-select-label" data-selected="eng" type="button"><img src="images/flags/gb.svg" /><span>English</span>
                 </button>
                 <div class="select__dropdown js-select-dropdown">
-                  <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
+                  <div class="custom-scroll select__dropdown-scroll" data-simplebar="data-simplebar">
                     <div class="select__options js-select-options">
                       <div class="select__option js-select-option" data-option="eng"><img src="images/flags/gb.svg" /><span>English</span></div>
                       <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg" /><span>Lithuanian</span></div>
