permissions-page page was added, manage-position-dropdown component was added,

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -131,7 +131,7 @@
           </div>
           <div class="employers-page__heading-buttons">
             <div class="button-group">
-              <a class="button button--border-surfie-green button-group__button" href="#">Permissions
+              <a class="button button--border-surfie-green button-group__button" href="permissions-page.html">Permissions
               </a>
               <div class="button-group__button">
                 <div class="dropdown invite-employee-dropdown js-dropdown" data-dropdown="notifications">
