permissions-page-admin tab was finished

--- a/app/static/permissions-page.html
+++ b/app/static/permissions-page.html
@@ -180,7 +180,219 @@
             <div class="catalog__box">
               <div class="catalog__content">
                 <div class="catalog__content-item tabs__content js-tabs-content is-active" data-content="admin">
-                  <div class="catalog__content-wrap"></div>
+                  <div class="catalog__content-wrap">
+                    <div class="row">
+                      <div class="col-12 col-xxl-1 offset-0 offset-xxl-11 d-flex justify-content-end justify-content-xxl-start">
+                        <div class="dropdown js-dropdown permissions-control-dropdown" data-dropdown="permissions-control-dropdown">
+                          <div class="dropdown__toggle permissions-control-dropdown__toggle" data-dropdown-toggle="permissions-control-dropdown">
+                            <button class="burger "><span></span></button>
+                          </div>
+                          <div class="dropdown__body permissions-control-dropdown__body">
+                            <div class="permissions-control-dropdown__button">
+                              <button class="button button--fluid button--border-boston-blue" type="button" data-dropdown-close="permissions-control-dropdown"><span>Edit</span>
+                                <svg class="svg-icon svg-icon--boston-blue button__icon" width="12" height="12">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
+                                </svg>
+                              </button>
+                            </div>
+                            <div class="permissions-control-dropdown__button">
+                              <button class="button button--fluid button--border-brick-red" type="button" data-dropdown-close="permissions-control-dropdown">Delete
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6 col-xl-4 col-xxl-3 offset-0 offset-xxl-1 mb-40">
+                        <div class="column-group column-group--sm">
+                          <div class="column-group__item">
+                            <h4>Actions</h4>
+                          </div>
+                          <div class="column-group__item">
+                            <div class="permissions-box js-permissions-box">
+                              <div class="permissions-box__header">
+                                <div class="permissions-box__title">
+                                  <h5>Project window:</h5>
+                                </div>
+                                <div class="permissions-box__toggle is-active">
+                                  <div class="permissions-box__toggle-title">
+                                    <h6 class="text-surfie-green">Hide</h6>
+                                  </div>
+                                  <div class="permissions-box__toggle-icon">
+                                    <svg class="svg-icon svg-icon--surfie-green" width="8" height="6">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="permissions-box__content">
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Add comment</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Remove comment</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Add new task</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox"><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Send to client</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox"><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Cancel project</span>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6 col-xl-4 col-xxl-3 mb-40">
+                        <div class="column-group column-group--sm">
+                          <div class="column-group__item">
+                            <h4>Visibility</h4>
+                          </div>
+                          <div class="column-group__item">
+                            <div class="permissions-box js-permissions-box">
+                              <div class="permissions-box__header">
+                                <div class="permissions-box__title">
+                                  <h5>Project window:</h5>
+                                </div>
+                                <div class="permissions-box__toggle is-active">
+                                  <div class="permissions-box__toggle-title">
+                                    <h6 class="text-surfie-green">Hide</h6>
+                                  </div>
+                                  <div class="permissions-box__toggle-icon">
+                                    <svg class="svg-icon svg-icon--surfie-green" width="8" height="6">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="permissions-box__content">
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Add comment</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Remove comment</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Add new task</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox"><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Send to client</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox"><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Cancel project</span>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6 col-xl-4 col-xxl-3 mb-40">
+                        <div class="column-group column-group--sm">
+                          <div class="column-group__item">
+                            <h4>Worker Summary</h4>
+                          </div>
+                          <div class="column-group__item">
+                            <div class="permissions-box js-permissions-box">
+                              <div class="permissions-box__header">
+                                <div class="permissions-box__title">
+                                  <h5>Project window:</h5>
+                                </div>
+                                <div class="permissions-box__toggle is-active">
+                                  <div class="permissions-box__toggle-title">
+                                    <h6 class="text-surfie-green">Hide</h6>
+                                  </div>
+                                  <div class="permissions-box__toggle-icon">
+                                    <svg class="svg-icon svg-icon--surfie-green" width="8" height="6">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="permissions-box__content">
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Add comment</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Remove comment</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox" checked><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Add new task</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox"><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Send to client</span>
+                                  </label>
+                                </div>
+                                <div class="permissions-box__content-item">
+                                  <label class="checkbox">
+                                    <div class="checkbox__box">
+                                      <input class="checkbox__input" type="checkbox"><span class="checkbox__checkmark"></span>
+                                    </div><span class="checkbox__name">Cancel project</span>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="catalog__content-item tabs__content js-tab-content" data-content="projectManager"></div>
                 <div class="catalog__content-item tabs__content js-tab-content" data-content="administrator"></div>
